# sit-gamedev

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CodingStandard.md  README.md  game.m.cpp
src/engine/containers/: dynamic_array.cpp  dynamic_array.h  dynamicarray.cpp  dynamicarray.cpp~  dynamicarray.h  dynamicarray.h~  map.cpp  map.h  node.cpp  node.h
src/engine/data/: json_entity.cpp  json_entity.h  json_parser.cpp  json_parser.h
src/engine/events/: event_bus.cpp  event_bus.h  event_dispatcher.cpp  event_dispatcher.h  ievent.cpp  ievent.h
src/engine/factories/: actor_factory.cpp  actor_factory.h
src/engine/input/: input.cpp  input.h
src/engine/memory/: counting_allocator.cpp  counting_allocator.h  default_allocator.cpp  default_allocator.h  iallocator.h  stack_guard.cpp  stack_guard.h
src/engine/rendering/: renderable_sprite.cpp  renderable_sprite.h  renderer.cpp  renderer.h
src/engine/scene/: actor.cpp  actor.h  collidable_bounds.cpp  collidable_bounds.h  icollider.cpp  icollider.h  itickable.h  nxn_scene_graph.cpp  nxn_scene_graph.h  rectangle_bounds.cpp  rectangle_bounds.h  scene.cpp  scene.h
src/game/controllers/: move_to_controller.cpp  move_to_controller.h  player_controller.cpp  player_controller.h
test/: allocatortest.cpp  dynamicarraytest.cpp  jsonparsertest.cpp  maptest.cpp  rectangleboundstest.cpp  test.m.cpp
